# bitsgap_tech_task

./: Cargo.toml  build.rs
proto/: bitsgrap_tech_task.proto
src/: aggregator.rs  database.rs  main.rs
src/client/: errors.rs  mod.rs  models.rs  rest.rs  ws.rs
src/common/: models.rs  utils.rs
src/database/: mod.rs  queries.rs
