[package]
name = "bitsgap_tech_task"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
strum = "0.26"
strum_macros = "0.26"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tungstenite = "0.26.1"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sqlite = "0.36.1"

[build-dependencies]
tonic-build = "*"
